<resources>
    <string name="app_name">Ремонт бытовой техники. Тверь</string>
    <string name="catalog">Услуги</string>
    <string name="about">Мастер</string>
    <string name="washcardesc">Стиральная машина — это сердце дома, и ее поломка может вызвать хаос. Но не стоит паниковать! Я, опытный мастер, готов помочь вам вернуть вашу стиральную машину в строй. Диагностика и ремонт - моя специальность. От электронных проблем до замены подшипников, я сделаю все, чтобы ваша машина снова работала как часы.</string>
    <string name="waterhotdesc">Водонагреватель — это гарантия горячей воды в вашем доме. Но когда он ломается, это может стать катастрофой. Не беспокойтесь, я, опытный мастер, готов помочь вам вернуть ваш водонагреватель в рабочее состояние. Моя диагностика и ремонт покроют все - от утечек до неисправностей электроники. Я выполню работу качественно и в срок, чтобы вы могли снова наслаждаться горячей водой.</string>
    <string name="waterhot">Водонагреватель</string>
    <string name="washcar">Стиральная машина</string>
    <string name="dishdesc">Посудомоечная машина — это ваш личный помощник на кухне. Но когда она ломается, это может стать настоящей головной болью. Не отчаивайтесь! Я, опытный мастер, готов помочь вам вернуть вашу посудомойку в строй. Моя диагностика и ремонт покроют все - от проблем с помпой до утечек воды. Я выполню работу качественно и в срок, чтобы вы снова могли наслаждаться чистой посудой.</string>
    <string name="dish">Посудомоечная машина</string>
    <string name="addtocart">Заказать</string>
    <string name="price5">от 500Р</string>
    <string name="descAbout">Высококвалифицированный мастер Александр с 10-летним опытом работы в ремонте бытовой техники в Твери и пригороде. Имею обширные знания и навыки в диагностике и устранении неисправностей различных марок и моделей бытовых приборов.</string>
</resources>